# pdbstore

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  COPYING  MANIFEST.in  Makefile  README.rst  codecov.yml  help.mk  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-lint.txt  requirements-test.txt  requirements.txt  setup.ori  setup.py  tox.ini
.github/workflows/: docs.yml  lint.yml  pre_commit.yml  release.yml  stale.yml  test.yml
conda/: meta.yaml
docs/: Makefile  make.bat
docs/source/: cli-commands.rst  cli-usage.rst  conf.py  index.rst
docs/source/_static/: rtd_theme_overrides.css
docs/source/api/: cli.rst  config.rst  const.rst  exceptions.rst  index.rst  io.rst  report.rst  store.rst
docs/source/api/cli/: class.rst  command.rst  decorators.rst  functions.rst
docs/source/api/io/: file.rst  functions.rst  pdbfile.rst
docs/source/api/store/: entry.rst  history.rst  store.rst  summary.rst  transaction.rst  transaction_type.rst  transactions.rst
docs/source/commands/: add.rst  clean.rst  del.rst  fetch.rst  promote.rst  query.rst  report.rst  unused.rst
installer/: build.py
pdbstore/: __init__.py  __main__.py  _version.py  config.py  const.py  exceptions.py  typing.py  util.py
pdbstore/cli/: args.py  boolean_action.py  cli.py  command.py  exit_codes.py  formatters.py  once_argument.py  smart_formatter.py
pdbstore/cli/commands/: add.py  clean.py  del.py  fetch.py  promote.py  query.py  report.py  unused.py
pdbstore/io/: __init__.py  cab.py  colors.py  file.py  output.py  pdbfile.py  portablepdbfile.py
pdbstore/report/: __init__.py  base.py  file.py  generator.py  product.py  transaction.py
pdbstore/store/: __init__.py  entry.py  history.py  store.py  summary.py  transaction.py  transaction_type.py  transactions.py
pdbstore/templates/: README.md  __init__.py
pdbstore/templates/html/: files.tmpl  products.tmpl  transactions.tmpl
pdbstore/templates/json/: files.tmpl  products.tmpl  transactions.tmpl
pdbstore/templates/markdown/: files.tmpl  products.tmpl  transactions.tmpl
pdbstore/templates/text/: files.tmpl  products.tmpl  transactions.tmpl
templates/: CHANGELOG.md.j2
tests/: conftest.py
tests/cli/: conftest.py  test_add.py  test_clean.py  test_cli.py  test_delete.py  test_fetch.py  test_promote.py  test_query.py  test_report.py  test_unused.py
tests/smoke/: test_dist.py
tests/unit/: test_cab.py  test_command.py  test_config.py  test_file.py  test_formatters.py  test_hash.py  test_io_colors.py  test_native_pdb.py  test_output.py  test_portable_pdb.py  test_report.py  test_setup.py  test_store.py  test_transaction.py  test_transaction_entry.py  test_util.py
